--- a/DataBase/package.json
+++ b/DataBase/package.json
@@ -12,6 +12,7 @@
     "@faker-js/faker": "^9.0.0",
     "ejs": "^3.1.10",
     "express": "^4.20.0",
+    "method-override": "^3.0.0",
     "mysql2": "^3.11.0",
     "uuid": "^10.0.0"
   }
