--- a/MONGO/package.json
+++ b/MONGO/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mongo",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "index2.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,6 +10,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "ejs": "^3.1.10",
+    "express": "^4.21.0",
     "mongoose": "^8.6.3"
   }
 }
