--- a/8_rest_classes/package.json
+++ b/8_rest_classes/package.json
@@ -12,6 +12,7 @@
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "method-override": "^3.0.0",
+    "nodemon": "^2.0.18",
     "uuid": "^10.0.0"
   }
 }
